third_party/move/move-prover/tests/sources/functional/enum_diff_type.exp
Move prover returns: exiting with verification errors
error: data invariant does not hold
   ┌─ tests/sources/functional/enum_diff_type.move:17:9
   │
17 │         invariant (self is CommonFields::Bar) ==> self.z > 10;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/enum_diff_type.move:23: test_data_invariant
   =     at tests/sources/functional/enum_diff_type.move:24: test_data_invariant
   =     at tests/sources/functional/enum_diff_type.move:22: test_data_invariant
   =     at tests/sources/functional/enum_diff_type.move:21: test_data_invariant
   =     at tests/sources/functional/enum_diff_type.move:17
   =     at tests/sources/functional/enum_diff_type.move:21: test_data_invariant
   =         common = <redacted>
   =     at tests/sources/functional/enum_diff_type.move:26: test_data_invariant
   =         <redacted> = <redacted>
   =     at tests/sources/functional/enum_diff_type.move:27: test_data_invariant
   =         z = <redacted>
   =     at tests/sources/functional/enum_diff_type.move:17
